@@ -1,3 +1,9 @@
+2008-10-10  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR debug/37002
+	* dwarf2out.c (mem_loc_descriptor): Use DRAP for vDRAP which
+	has been optimized out.
+
 2008-10-10  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* config/sh/sh.h (PREFERRED_RELOAD_CLASS): Test PIC_ADDR_P
